# teclado-android-ai

./: .gitignore  .gitmodules  ARQUITECTURA_HIBRIDA.md  INSTALL.md  README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voicetype/keyboard/: AudioRecorder.kt  LLMEngine.kt  VoiceTypeIME.kt  WhisperEngine.kt
app/src/main/java/com/voicetype/keyboard/ui/: SettingsActivity.kt
app/src/main/jni/: CMakeLists.txt  llama_wrapper.cpp  whisper_wrapper.cpp
app/src/main/res/drawable/: bg_button_rounded.xml  bg_mic_circle.xml  ic_backspace.xml  ic_settings.xml  ic_space.xml  mic_button_bg.xml
app/src/main/res/layout/: keyboard_view.xml  voice_keyboard_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml
gradle/: libs.versions.toml
